--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <link href="css/red-green.css" rel="stylesheet">
     <!-- Flite theme css -->
     <link href="css/flite.css" rel="stylesheet">
+    <!-- Angular Styles -->
+    <link href="js\angular\angular-csp.css" rel="stylesheet">
 
     <!-- AdminUI demo css-->
     <!--<link href="css/adminUIdemo.css" rel="stylesheet">-->
@@ -70,6 +72,9 @@
 <script src="js/plugins/oclazyload/dist/ocLazyLoad.min.js"></script>
 <script src="js/ui-router/angular-ui-router.min.js"></script>
 <script src="js/angular/angular-animate.min.js"></script>
+<script src="js/angular/angular-cookies.min.js"></script>
+<script src="js/angular/angular-resource.min.js"></script>
+
 <script src="js/bootstrap/ui-bootstrap-tpls-1.1.2.min.js"></script>
 
 
@@ -81,6 +86,24 @@
  After your sign up replace the key in the URL below..
 -->
 
+
+<!-- OKTA  -->
+
+<!--<script src="https://cdn.auth0.com/js/auth0/8.10.1/auth0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-auth0/2.0.0/angular-auth0.min.js"></script>-->
+
+
+
+<!-- OKTA  -->
+
+<!-- ANGULAR PERMISIONs-->
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-permission/5.3.2/angular-permission.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-permission/5.3.2/angular-permission-ui.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-permission/5.3.2/angular-permission-ng.js"></script>-->
+
+
+<!-- ANGULAR PERMISIONs -->
 
 
 <!-- sparkline js -->
@@ -110,10 +133,21 @@
 
 <script src="js/controllers.js"></script>
 <script src="js/directives.js"></script>
-
+<!-- FLITE CONSTANTS -->
+<script src="js/constants.js"></script>
+<!--<script src="js/app/app.run.js"></script>-->
+<script src="js/app/auth/auth.service.js"></script>
 
 <!-- Custom and plugin javascript -->
 <script src="js/adminui.js"></script>
+
+<!-- Custom controllers -->
+<script src="js/app/controllers/LoginCtrl.js"></script>
+<script src="js/app/controllers/UsersCtrl.js"></script>
+
+<!-- Custom Services -->
+
+<script src="js/app/services/services.js"></script>
 
 <!-- AdminUI demo js-->
 <!--<script src="js/adminUIdemo.js"></script>-->
